@@ -48,6 +48,8 @@ Version 0.7.5 UNRELEASED
 
   * [curses] Allow to hide bottom half in several screens (Closes: #453853)
 
+  * [cmdline] Hide Show-Why reasons when the string is empty (Closes: #576584)
+
 - Internal changes:
 
   * Change APT::Changelogs::Server (src/apt_options.cc) from
